shift error solved in leaveform

--- a/Principal/PrincipalSideBar.css
+++ b/Principal/PrincipalSideBar.css
@@ -54,7 +54,7 @@
   }
 .notify{
     position: absolute;
-    right: 150px;
+    right: 250px;
     top: 20px;
     font-size: 25px;
     cursor: pointer;
